cluster/apps/ai/llama-backend/llama-static-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-static-a
spec:
  type: ClusterIP
  selector:
    app: llama-static-a
  ports:
    - name: http
      port: 8000
      targetPort: http
